--- a/package.json
+++ b/package.json
@@ -11,11 +11,53 @@
     "test": "jest"
   },
   "dependencies": {
+    "@codler/react-native-keyboard-aware-scroll-view": "^2.0.1",
+    "@flomagazacilik/flo-digital-components": "^1.0.53",
+    "@flomagazacilik/flo-pathfinder": "^1.6.21",
+    "@flomagazacilik/flo-zebra-bt": "^1.0.30",
+    "@react-native-async-storage/async-storage": "^1.23.1",
+    "@react-native-community/clipboard": "^1.5.1",
+    "@react-native-community/datetimepicker": "^8.1.1",
+    "@react-native-picker/picker": "^2.7.7",
+    "@react-navigation/bottom-tabs": "^6.6.0",
+    "@react-navigation/drawer": "^6.7.0",
+    "@react-navigation/native": "^6.1.17",
+    "@react-navigation/native-stack": "^6.10.0",
+    "@react-navigation/stack": "^6.4.0",
+    "@twotalltotems/react-native-otp-input": "^1.3.11",
+    "axios": "^1.7.2",
+    "i18n-js": "^4.4.3",
+    "linq": "^4.0.3",
+    "mobx": "^6.12.5",
+    "mobx-react": "^9.1.1",
+    "moment": "^2.30.1",
+    "moment-timezone": "^0.5.45",
     "react": "18.2.0",
+    "react-content-loader": "^7.0.2",
     "react-dom": "^18.3.1",
     "react-native": "0.72.12",
+    "react-native-barcode-mask": "^1.2.4",
+    "react-native-ble-plx": "^3.2.0",
+    "react-native-exit-app": "^2.0.0",
+    "react-native-file-viewer": "^2.1.5",
+    "react-native-gesture-handler": "^2.17.1",
+    "react-native-iphone-x-helper": "^1.3.1",
+    "react-native-masked-text": "^1.13.0",
+    "react-native-modal": "^13.0.1",
+    "react-native-modal-datetime-picker": "^17.1.0",
+    "react-native-modalize": "^2.1.1",
+    "react-native-portalize": "^1.0.7",
+    "react-native-reanimated": "^3.12.1",
+    "react-native-safe-area-context": "^4.10.7",
+    "react-native-screens": "^3.32.0",
+    "react-native-svg": "^15.3.0",
     "react-native-web": "^0.19.12",
-    "react-scripts": "^5.0.1"
+    "react-native-webview": "^13.10.4",
+    "react-scripts": "^5.0.1",
+    "react-timer-hook": "^3.0.7",
+    "reactide-config": "^1.0.2",
+    "styled-components": "^6.1.11",
+    "zustand": "^4.5.4"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
