converted react-native-vision-camera to expo-barcode-scanner

--- a/ios/FloDigital/Info.plist
+++ b/ios/FloDigital/Info.plist
@@ -35,6 +35,9 @@
 			</dict>
 		</dict>
 	</dict>
+	<key>NSCameraUsageDescription</key>
+    <string>Barkod okutma ve ürün sorgulama için kamera erişimine izin vermelisiniz.</string>
+
 	<key>NSBluetoothAlwaysUsageDescription</key>
 	<string>Our app uses bluetooth to find, connect and transfer data between different devices</string>
 	<key>NSLocationWhenInUseUsageDescription</key>
