--- a/package.json
+++ b/package.json
@@ -15,7 +15,6 @@
     "@codler/react-native-keyboard-aware-scroll-view": "^2.0.1",
     "@expo/vector-icons": "^14.0.2",
     "@flomagazacilik/flo-digital-components": "^1.0.53",
-    "@flomagazacilik/flo-pathfinder": "^1.6.21",
     "@flomagazacilik/flo-zebra-bt": "^1.0.30",
     "@react-native-async-storage/async-storage": "^1.23.1",
     "@react-native-community/blur": "^4.4.0",
@@ -57,11 +56,13 @@
     "react-native-modal": "^13.0.1",
     "react-native-modal-datetime-picker": "^17.1.0",
     "react-native-modalize": "^2.1.1",
+    "react-native-permissions": "^4.1.5",
     "react-native-portalize": "^1.0.7",
     "react-native-reanimated": "3.8.1",
     "react-native-safe-area-context": "4.10.7",
     "react-native-screens": "^3.32.0",
     "react-native-svg": "^15.3.0",
+    "react-native-vision-camera": "3.9.2",
     "react-native-web": "^0.19.12",
     "react-native-webview": "^13.10.5",
     "react-scripts": "^5.0.1",
