--- a/package.json
+++ b/package.json
@@ -45,6 +45,8 @@
     "react-native-barcode-mask": "^1.2.4",
     "react-native-base64": "^0.2.1",
     "react-native-ble-plx": "^3.2.0",
+    "react-native-blob-util": "^0.19.9",
+    "react-native-create-thumbnail": "^2.0.0",
     "react-native-device-info": "^11.1.0",
     "react-native-exit-app": "^2.0.0",
     "react-native-file-viewer": "^2.1.5",
