--- a/package.json
+++ b/package.json
@@ -63,6 +63,7 @@
     "react-native-reanimated": "3.8.1",
     "react-native-safe-area-context": "4.10.7",
     "react-native-screens": "^3.32.0",
+    "react-native-sound": "^0.11.2",
     "react-native-svg": "^15.3.0",
     "react-native-vision-camera": "3.9.2",
     "react-native-web": "^0.19.12",
