--- a/package.json
+++ b/package.json
@@ -23,11 +23,11 @@
     "@react-native-community/clipboard": "^1.5.1",
     "@react-native-community/datetimepicker": "^8.1.1",
     "@react-native-picker/picker": "^2.7.7",
-    "@react-navigation/bottom-tabs": "^6.6.0",
-    "@react-navigation/drawer": "^6.7.0",
+    "@react-navigation/bottom-tabs": "^6.5.20",
+    "@react-navigation/drawer": "^6.6.15",
     "@react-navigation/native": "^6.1.17",
-    "@react-navigation/native-stack": "^6.10.0",
-    "@react-navigation/stack": "^6.4.0",
+    "@react-navigation/native-stack": "^6.9.26",
+    "@react-navigation/stack": "^6.3.29",
     "@twotalltotems/react-native-otp-input": "^1.3.11",
     "axios": "^1.7.2",
     "i18n-js": "^4.4.3",
@@ -52,7 +52,7 @@
     "react-native-device-info": "^11.1.0",
     "react-native-exit-app": "^2.0.0",
     "react-native-file-viewer": "^2.1.5",
-    "react-native-gesture-handler": "2.9.0",
+    "react-native-gesture-handler": "^2.16.0",
     "react-native-image-crop-picker": "^0.41.2",
     "react-native-iphone-x-helper": "^1.3.1",
     "react-native-linear-gradient": "^2.8.3",
@@ -70,6 +70,7 @@
     "react-native-svg": "^15.3.0",
     "react-native-vision-camera": "3.9.2",
     "react-native-web": "^0.19.12",
+    "react-native-web-linear-gradient": "^1.1.2",
     "react-native-webview": "^13.10.5",
     "react-scripts": "^5.0.1",
     "react-timer-hook": "^3.0.7",
@@ -97,7 +98,7 @@
   "engines": {
     "node": ">=16"
   },
-  "packageManager": "yarn@3.6.4",
+  "packageManager": "yarn@4.1.1",
   "browserslist": {
     "production": [
       ">0.2%",
