--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "mobx-react": "^9.1.1",
     "moment": "^2.30.1",
     "moment-timezone": "^0.5.45",
+    "nanoid": "^5.0.7",
     "patch-package": "^8.0.0",
     "react": "18.2.0",
     "react-content-loader": "^7.0.2",
@@ -111,5 +112,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "resolutions": {
+    "**/nanoid": "3.3.5"
   }
 }
