--- a/package.json
+++ b/package.json
@@ -49,13 +49,14 @@
     "react-native-barcode-mask": "^1.2.4",
     "react-native-base64": "^0.2.1",
     "react-native-ble-plx": "^3.2.0",
-    "react-native-blob-util": "^0.19.9",
+    "react-native-blob-util": "^0.19.11",
     "react-native-create-thumbnail": "^2.0.0",
     "react-native-device-info": "^11.1.0",
     "react-native-exit-app": "^2.0.0",
     "react-native-file-viewer": "^2.1.5",
-    "react-native-gesture-handler": "^2.16.0",
+    "react-native-gesture-handler": "2.16.0",
     "react-native-image-crop-picker": "^0.41.2",
+    "react-native-image-picker": "^7.1.2",
     "react-native-iphone-x-helper": "^1.3.1",
     "react-native-linear-gradient": "^2.8.3",
     "react-native-localize": "^3.2.0",
@@ -65,12 +66,14 @@
     "react-native-modalize": "^2.1.1",
     "react-native-permissions": "^4.1.5",
     "react-native-portalize": "^1.0.7",
+    "react-native-print": "^0.11.0",
     "react-native-reanimated": "3.8.1",
     "react-native-safe-area-context": "4.10.7",
     "react-native-screens": "^3.32.0",
     "react-native-sound": "^0.11.2",
-    "react-native-svg": "^15.3.0",
-    "react-native-vision-camera": "3.9.2",
+    "react-native-svg": "15.3.0",
+    "react-native-video": "^6.4.3",
+    "react-native-vision-camera": "^3.9.2",
     "react-native-web": "^0.19.12",
     "react-native-web-linear-gradient": "^1.1.2",
     "react-native-webview": "^13.10.5",
