--- a/ios/Podfile
+++ b/ios/Podfile
@@ -10,7 +10,8 @@
  node_require('react-native/scripts/react_native_pods.rb')
  node_require('react-native-permissions/scripts/setup.rb')
 
-platform :ios, min_ios_version_supported
+platform :ios, '13.0'
+
 prepare_react_native_project!
 
 # ⬇️ uncomment wanted permissions
