--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "web": "react-scripts start",
     "lint": "eslint .",
     "start": "react-native start",
+    "test": "jest",
     "postinstall": "patch-package"
   },
   "dependencies": {
