--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "react-native-base64": "^0.2.1",
     "react-native-ble-plx": "^3.2.0",
     "react-native-blob-util": "^0.19.11",
+    "react-native-compressor": "^1.8.25",
     "react-native-create-thumbnail": "^2.0.0",
     "react-native-device-info": "^11.1.0",
     "react-native-exit-app": "^2.0.0",
